# md2docx

./: .dockerignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml
.github/ISSUE_TEMPLATE/: 01-milestone-epic.md  02-feature-task.md  config.yml
deploy/: gcp-centos10-deploy.sh
docs/: 产品迭代执行清单-2026Q2.md  产品迭代计划-2026Q2.md
examples/: config.yaml  generate_template.py  sample.md  template.docx
src/md2docx/: cli.py  converter.py  mapper.py  mermaid_renderer.py  models.py  normalize.py  parser.py  template_index.py  web.py  writer.py
src/md2docx.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt
tests/: test_mapper.py  test_normalize.py  test_parser.py  test_web.py
